# smooth3d

./: CMakeLists.txt  CMakePresets.json  README.md
cmake/: version.cmake
smooth3D/: CMakeLists.txt  smooth3DConfig.cmake.in
smooth3D/inc/: machine_types.h.in
smooth3D/inc/smooth3D/: smooth.h  smooth3d.h
smooth3D/src/: s3_3dgeom.c  s3mem.c
smooth3D/src/bridgeMesquite/: ConditionNumber.cpp  InverseMeanRatio.cpp  Smooth3DMesh.cpp  Smooth3DMesh.h
smooth3D/src/genuine/: Tipton.c  laplace.c
smooth3D/src/getme/: GetMe2D.cpp  GetMe3D.cpp
smooth3D/src/math/: BFGS.h  ConjugateGradientPr.h  LagrangeMapping.h  LineSearch.h  MeanRatio.h  Optimize.h  Real3.h  condition.h  orthogonal.h
smooth3D/src/opt2D/: IObjective3D.h  ObjectiveCondition2D.cpp  ObjectiveCondition2D.h  ObjectiveLag2D.cpp  ObjectiveLag2D.h  ObjectiveOrthogonal2D.cpp  ObjectiveOrthogonal2D.h  s3_conditionnumber2D.cpp  s3_orthogonal2D.cpp
smooth3D/src/tiptonJun/: Jun.cpp  jun2d.cpp
test_link/: CMakeLists.txt  main.cpp
